--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ header{
     gap: 1rem;
     flex-wrap: wrap;
     align-items: center;
+    justify-content: space-around;
     img{
         height: 100px;
         
