--- a/style.css
+++ b/style.css
@@ -32,7 +32,32 @@ main {
     border: 1px solid #ccc; /* Bordes para mejor visualización */
     box-sizing: border-box;
 }
+.galeria-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    gap: 20px;
+}
 
+.proyecto {
+    width: 300px;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+}
+
+.proyecto img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+}
+.proyecto video {
+    width: 100%;
+    height: auto;
+    max-height: 200px;
+    object-fit: cover;
+}
 /* Media query para pantallas pequeñas */
 @media (max-width: 768px) {
     main {
@@ -46,6 +71,14 @@ main {
     .columnas {
         grid-template-columns: 1fr; /* Apilar columnas en móviles */
         grid-column: span 1; /* Asegura que las columnas ocupen el ancho completo en móviles */
+    }
+    nav ul {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    nav ul li {
+        margin: 5px 0;
     }
 }
 header{
@@ -65,7 +98,38 @@ header{
         font-family: 'Audiowide', cursive;
         text-align: center;
         width: 60%;
+
     }
+    nav {
+        background-color: darkorange;
+        padding: 10px 0;
+    }
+    
+    nav ul {
+        list-style-type: none;
+        padding: 0;
+        margin: 0;
+        display: flex;
+        justify-content: center;
+    }
+    
+    nav ul li {
+        margin: 0 10px;
+        color: black;
+    }
+    
+    nav ul li a {
+        color: white;
+        text-decoration: none;
+        font-family: 'Audiowide', cursive;
+        font-size: 16px;
+        transition: color 0.3s ease;
+    }
+    
+    nav ul li a:hover {
+        color: darkorange;
+    }
+    
 }
 footer{
     background-color: darkorange;
