areglo estilo menu

--- a/style.css
+++ b/style.css
@@ -101,8 +101,8 @@ header{
 
     }
     nav {
-        background-color: darkorange;
-        padding: 10px 0;
+        width: 100%;
+        background-color: #f8f8f8;
     }
     
     nav ul {
@@ -119,7 +119,9 @@ header{
     }
     
     nav ul li a {
-        color: white;
+        display: block;
+        padding: 10px 15px;
+        color: #333;
         text-decoration: none;
         font-family: 'Audiowide', cursive;
         font-size: 16px;
@@ -129,6 +131,22 @@ header{
     nav ul li a:hover {
         color: darkorange;
     }
+    
+    @media screen and (max-width: 768px) {
+        nav ul {
+            flex-direction: column;
+            align-items: center;
+        }
+    
+        nav ul li {
+            margin: 5px 0;
+        }
+    
+        nav ul li a {
+            padding: 8px 12px;
+        }
+    }
+    
     
 }
 footer{
